# m5apps

./: .gitignore  .gitmodules  README.MD  boot.py  pyproject.toml  requirements.txt
apps/: AppSelector.py  RandomColour.py  RotateArrow.py
examples/: matrix_text_scroll.py  mpu_calibrate.py  mpu_test.py  sync_button_test.py  threading_button_test.py  threading_test.py
external_modules/: abutton.py  mpu6886.py
flash/utils/: MatrixHelper.py
scripts/: connect.sh  flash.sh  get_device_location.sh  put_all_files.sh
utils/: App.py  ButtonHelper.py  Matrix.py  MatrixHelper.py  MpuHelper.py  MultiThreadedApp.py  PixelMatrixHelper.py  SynchronousApp.py
